# LLM4Control

./: .gitignore  ME340_AL2_SP2020_Final_Exam.tex  README.md  endpoint_test.py  env.example  index.html  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ControlBench/: ControlBench.tex
ControlBench-C/figs/: 7.7.eps  8.2-1.eps
figs/: 8.2-2.eps
llm/: anthropic_api.py  azure_api.py  databricks_api.py  exceptions.py  openai_api.py
llm4control/chatbots/: gcloud_api.py  mamba_bench.py
llm4control/llms/: committee_judgement.py
llm4control/query/: mamba_ask.py  perplexity_ask.py
llm4control/structurize/: generate_json_qa.py
notebooks/: check_bench.ipynb  ctrlbenchmark.json
src/query/: perplexity_ask.py
src/structurize/: generate_json_qa.py
