[tool.poetry]
name = "llm4control"
version = "0.1.0"
description = ""
authors = ["Vineet Tiruvadi <virati@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
perplexityai = {git = "https://github.com/nathanrchn/perplexityai.git"}
tex2py = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
